# locale-check

./: CHANGELOG.md  Cargo.toml  README.md  package.json  pnpm-lock.yaml
.cargo/: config
.github/workflows/: build-mac.yml  build.yml
assets/: main.css
npm/: getBinary.js
src/: lib.rs  main.rs  server.rs  translation_file.rs  ts_file.rs
src/interactive/: mod.rs  server.rs  translations.rs
templates/: another-page.html  base.html  hello.html  todo-list.html
templates/components/: translations-list.html
templates/components/translations-list/: add-translation.html  translations-list.html
templates/icons/: delete.html
templates/layouts/: base.html
templates/pages/: another-page.html  hello.html  translations.html
test_files/: component.tsx  en.json  select-component.tsx  simon-case.tsx  sv.json
