[package]
name = "ramilang"
version = "0.0.12"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.3.21", features = ["derive"] }
walkdir = "2.3.3"
serde = { version = "1.0.164", features = ["derive"] }
serde_json = "1.0.99"
thiserror = "1.0.47"
nom = "7.1.3"
console = "0.15.7"
askama = { version = "0.12.0", features = ["with-axum"] }
axum = "0.6.20"
tokio = { version = "1.32.0", features = ["full"] }
tracing = "0.1.37"
tracing-subscriber = { version = "0.3.17", features = ["env-filter"] }
tower = "0.4.13"
tower-http = { version = "0.4.3", features = ["fs"] }
anyhow = "1.0.75"
askama_axum = "0.3.0"
webbrowser = "0.8.11"
